--- a/index.html
+++ b/index.html
@@ -607,13 +607,52 @@
             { question: '화난', answer: 'angry', options: ['happy', 'sad', 'mad', 'upset'] }, { question: '나쁜', answer: 'bad', options: ['good', 'wrong', 'evil', 'poor'] }, { question: '큰', answer: 'big', options: ['small', 'large', 'huge', 'great'] }, { question: '검은색', answer: 'black', options: ['white', 'red', 'blue', 'dark'] }, { question: '파란색', answer: 'blue', options: ['red', 'yellow', 'green', 'sky'] }, { question: '갈색', answer: 'brown', options: ['black', 'white', 'tan', 'wood'] }, { question: '깨끗한', answer: 'clean', options: ['dirty', 'wash', 'clear', 'neat'] }, { question: '추운', answer: 'cold', options: ['hot', 'cool', 'warm', 'ice'] }, { question: '어두운', answer: 'dark', options: ['light', 'bright', 'black', 'night'] }, { question: '더러운', answer: 'dirty', options: ['clean', 'messy', 'mud', 'dust'] }, { question: '마른', answer: 'dry', options: ['wet', 'water', 'towel', 'sand'] }, { question: '쉬운', answer: 'easy', options: ['hard', 'simple', 'difficult', 'soft'] }, { question: '빠른', answer: 'fast', options: ['slow', 'quick', 'run', 'speed'] }, { question: '뚱뚱한', answer: 'fat', options: ['thin', 'big', 'heavy', 'plump'] }, { question: '좋은', answer: 'good', options: ['bad', 'great', 'nice', 'fine'] }, { question: '초록색', answer: 'green', options: ['red', 'blue', 'yellow', 'grass'] }, { question: '행복한', answer: 'happy', options: ['sad', 'glad', 'joy', 'smile'] }, { question: '어려운', answer: 'hard', options: ['easy', 'soft', 'difficult', 'tough'] }, { question: '무거운', answer: 'heavy', options: ['light', 'big', 'stone', 'lift'] }, { question: '뜨거운', answer: 'hot', options: ['cold', 'warm', 'fire', 'sun'] }, { question: '큰', answer: 'large', options: ['small', 'big', 'huge', 'wide'] }, { question: '가벼운', answer: 'light', options: ['heavy', 'dark', 'bright', 'easy'] }, { question: '긴', answer: 'long', options: ['short', 'tall', 'big', 'line'] }, { question: '새로운', answer: 'new', options: ['old', 'young', 'fresh', 'modern'] }, { question: '오래된', answer: 'old', options: ['new', 'young', 'ancient', 'age'] }, { question: '하나', answer: 'one', options: ['two', 'three', 'four', 'first'] }, { question: '주황색', answer: 'orange', options: ['yellow', 'red', 'fruit', 'color'] }, { question: '가난한', answer: 'poor', options: ['rich', 'needy', 'money', 'bad'] }, { question: '예쁜', answer: 'pretty', options: ['beautiful', 'cute', 'ugly', 'nice'] }, { question: '자주색', answer: 'purple', options: ['violet', 'grape', 'flower', 'color'] }, { question: '빠른', answer: 'quick', options: ['fast', 'slow', 'rapid', 'swift'] }, { question: '조용한', answer: 'quiet', options: ['loud', 'silent', 'calm', 'soft'] }, { question: '빨간색', answer: 'red', options: ['blue', 'yellow', 'green', 'apple'] }, { question: '부유한', answer: 'rich', options: ['poor', 'wealthy', 'money', 'gold'] }, { question: '슬픈', answer: 'sad', options: ['happy', 'unhappy', 'cry', 'tear'] }, { question: '짧은', answer: 'short', options: ['long', 'tall', 'small', 'brief'] }, { question: '아픈', answer: 'sick', options: ['ill', 'well', 'healthy', 'pain'] }, { question: '느린', answer: 'slow', options: ['fast', 'quick', 'late', 'walk'] }, { question: '작은', answer: 'small', options: ['big', 'little', 'tiny', 'short'] }, { question: '부드러운', answer: 'soft', options: ['hard', 'gentle', 'smooth', 'fluffy'] }, { question: '강한', answer: 'strong', options: ['weak', 'powerful', 'tough', 'hard'] }, { question: '키가 큰', answer: 'tall', options: ['short', 'long', 'high', 'big'] }, { question: '마른', answer: 'thin', options: ['fat', 'slim', 'narrow', 'light'] }, { question: '못생긴', answer: 'ugly', options: ['pretty', 'beautiful', 'bad', 'horrible'] }, { question: '따뜻한', answer: 'warm', options: ['hot', 'cold', 'cool', 'sun'] }, { question: '약한', answer: 'weak', options: ['strong', 'feeble', 'frail', 'sick'] }, { question: '젖은', answer: 'wet', options: ['dry', 'damp', 'water', 'rain'] }, { question: '흰색', answer: 'white', options: ['black', 'red', 'snow', 'light'] }, { question: '어린', answer: 'young', options: ['old', 'new', 'child', 'baby'] }, { question: '노란색', answer: 'yellow', options: ['red', 'blue', 'sun', 'lemon'] }
         ];
 
-        const shopItems = [
-            { name: '나무', emoji: '🌳', price: 100 },
+const shopItems = [
+            { name: '벽돌 벽', emoji: '🧱', price: 20 },
+            { name: '새싹', emoji: '🌱', price: 25 },
+            { name: '나무 울타리', emoji: '🪵', price: 30 },
+            { name: '자갈길', emoji: '🪨', price: 35 },
+            { name: '흙', emoji: '🟫', price: 40 },
+            { name: '해바라기', emoji: '🌻', price: 40 },
+            { name: '돌담', emoji: '🗿', price: 40 },
+            { name: '튤립', emoji: '🌷', price: 45 },
             { name: '꽃', emoji: '🌸', price: 50 },
+            { name: '하얀 울타리', emoji: '⬜', price: 50 },
+            { name: '덤불', emoji: '🌿', price: 55 },
+            { name: '버섯', emoji: '🍄', price: 60 },
+            { name: '밀', emoji: '🌾', price: 65 },
             { name: '바위', emoji: '🪨', price: 70 },
+            { name: '네잎클로버', emoji: '🍀', price: 75 },
+            { name: '선인장', emoji: '🌵', price: 80 },
+            { name: '길', emoji: '🛤️', price: 80 },
+            { name: '꽃밭', emoji: '💐', price: 90 },
+            { name: '나무', emoji: '🌳', price: 100 },
+            { name: '우체통', emoji: '📮', price: 110 },
+            { name: '채소밭', emoji: '🥕', price: 120 },
+            { name: '허수아비', emoji: '🧍', price: 130 },
+            { name: '장작', emoji: '🪵', price: 140 },
+            { name: '상록수', emoji: '🌲', price: 150 },
             { name: '울타리', emoji: '🚧', price: 150 },
+            { name: '벌집', emoji: '🐝', price: 160 },
+            { name: '벚나무', emoji: '🌸', price: 180 },
+            { name: '캠프파이어', emoji: '🔥', price: 180 },
+            { name: '팻말', emoji: '🪧', price: 190 },
+            { name: '단풍나무', emoji: '🍁', price: 190 },
+            { name: '야자수', emoji: '🌴', price: 200 },
+            { name: '가로등', emoji: '💡', price: 220 },
+            { name: '벤치', emoji: '🪑', price: 250 },
+            { name: '우물', emoji: '🕳️', price: 280 },
+            { name: '연못', emoji: '💧', price: 300 },
+            { name: '보물상자', emoji: '🎁', price: 350 },
+            { name: '분수', emoji: '⛲', price: 400 },
+            { name: '천막', emoji: '⛺', price: 450 },
             { name: '집', emoji: '🏠', price: 500 },
-            { name: '연못', emoji: '💧', price: 300 }
+            { name: '온실', emoji: '🏡', price: 600 },
+            { name: '다리', emoji: '🌉', price: 800 },
+            { name: '성', emoji: '🏰', price: 1000 },
+            { name: '회전목마', emoji: '🎠', price: 1200 },
+            { name: '무지개', emoji: '🌈', price: 1500 },
+            { name: '별똥별', emoji: '🌠', price: 2000 }
         ];
 
         // ==================== 핵심 게임 함수 ====================
