--- a/index.html
+++ b/index.html
@@ -608,41 +608,49 @@
         ];
 
 const shopItems = [
-            { name: '벽돌 벽', emoji: '🧱', price: 20 },
+            // 저렴한 벽돌/바닥 블록
+            { name: '빨간 벽', emoji: '🟥', price: 15 },
+            { name: '파란 벽', emoji: '🟦', price: 15 },
+            { name: '초록 벽', emoji: '🟩', price: 15 },
+            { name: '노란 벽', emoji: '🟨', price: 15 },
+            { name: '하얀 벽', emoji: '⬜', price: 15 },
+            { name: '검은 벽', emoji: '⬛', price: 15 },
+            { name: '주황 벽', emoji: '🟧', price: 15 },
+            { name: '보라 벽', emoji: '🟪', price: 15 },
+            { name: '갈색 벽', emoji: '🟫', price: 15 },
+            
+            // 씨앗 및 저렴한 식물
             { name: '새싹', emoji: '🌱', price: 25 },
-            { name: '나무 울타리', emoji: '🪵', price: 30 },
             { name: '자갈길', emoji: '🪨', price: 35 },
-            { name: '흙', emoji: '🟫', price: 40 },
             { name: '해바라기', emoji: '🌻', price: 40 },
-            { name: '돌담', emoji: '🗿', price: 40 },
             { name: '튤립', emoji: '🌷', price: 45 },
             { name: '꽃', emoji: '🌸', price: 50 },
-            { name: '하얀 울타리', emoji: '⬜', price: 50 },
             { name: '덤불', emoji: '🌿', price: 55 },
             { name: '버섯', emoji: '🍄', price: 60 },
             { name: '밀', emoji: '🌾', price: 65 },
-            { name: '바위', emoji: '🪨', price: 70 },
             { name: '네잎클로버', emoji: '🍀', price: 75 },
             { name: '선인장', emoji: '🌵', price: 80 },
+
+            // 중간 가격 장식
             { name: '길', emoji: '🛤️', price: 80 },
             { name: '꽃밭', emoji: '💐', price: 90 },
             { name: '나무', emoji: '🌳', price: 100 },
             { name: '우체통', emoji: '📮', price: 110 },
             { name: '채소밭', emoji: '🥕', price: 120 },
             { name: '허수아비', emoji: '🧍', price: 130 },
-            { name: '장작', emoji: '🪵', price: 140 },
             { name: '상록수', emoji: '🌲', price: 150 },
             { name: '울타리', emoji: '🚧', price: 150 },
             { name: '벌집', emoji: '🐝', price: 160 },
             { name: '벚나무', emoji: '🌸', price: 180 },
             { name: '캠프파이어', emoji: '🔥', price: 180 },
-            { name: '팻말', emoji: '🪧', price: 190 },
             { name: '단풍나무', emoji: '🍁', price: 190 },
             { name: '야자수', emoji: '🌴', price: 200 },
             { name: '가로등', emoji: '💡', price: 220 },
             { name: '벤치', emoji: '🪑', price: 250 },
             { name: '우물', emoji: '🕳️', price: 280 },
             { name: '연못', emoji: '💧', price: 300 },
+
+            // 비싸고 예쁜 장식
             { name: '보물상자', emoji: '🎁', price: 350 },
             { name: '분수', emoji: '⛲', price: 400 },
             { name: '천막', emoji: '⛺', price: 450 },
