--- a/index.html
+++ b/index.html
@@ -163,6 +163,30 @@
         #story-text {
             white-space: pre-wrap;
         }
+        
+        /* 이야기 생성자 정보 스타일 */
+        .story-content {
+            margin-bottom: 20px;
+            line-height: 1.8;
+        }
+        .story-info {
+            border-top: 1px solid #e0e0e0;
+            padding-top: 15px;
+            margin-top: 20px;
+            text-align: center;
+        }
+        .story-info small {
+            color: #666;
+            font-size: 0.85rem;
+            background: #f5f5f5;
+            padding: 8px 12px;
+            border-radius: 10px;
+            display: inline-block;
+        }
+        .story-info strong {
+            color: #4169E1;
+        }
+        
         .story-btn {
             background: linear-gradient(45deg, #ff6b6b, #ff8e8e);
             color: white;
