fix: Update loadWordForDifficulty to use subject-based file paths
- Fixed 404 error caused by hardcoded words/level path
- Updated to use getSubjectFilePath() function for proper multi-subject support
- Resolves social studies subject loading issue

--- a/index.html
+++ b/index.html
@@ -2390,7 +2390,7 @@
             try {
                 console.log(`레벨 ${difficulty} 단어 JSON 파일 로딩 시작...`);
                 
-                const response = await fetch(`./words/level${difficulty}.json`);
+                const response = await fetch(getSubjectFilePath(difficulty));
                 
                 if (!response.ok) {
                     throw new Error(`JSON 파일 로드 실패: ${response.status}`);
