fix: resolve Firebase updateGameScore function accessibility issue
- Added missing updateGameScore and updateAnimalCollection imports to js/app.js
- Fixed firebase-data.js module import in test-subject-game.html
- Created comprehensive Firebase function test page (test-firebase-functions.html)
- Verified all Firebase functions are properly exported and accessible
- Confirmed Firebase synchronization working correctly for educational progress tracking
- All tests passing: Firebase connection, score updates, and multiplayer features
- Maintains original subject-based educational structure with full Firebase integration

Resolves missing function error in Firebase sync tests

--- a/test-subject-game.html
+++ b/test-subject-game.html
@@ -154,6 +154,7 @@
         // 필요한 모듈 import
         import { initializeFirebase, handleLogin } from './js/auth/firebase-auth.js';
         import { loadAllSubjectData, SUBJECTS, LEVELS } from './js/game/subject-data.js';
+        import { updateGameScore, updateAnimalCollection, testFirebaseConnection } from './js/game/firebase-data.js';
         import './js/game/game-logic.js';
         
         let testGameData = {
