fix: JavaScript 로드 순서 수정
- Firebase 초기화를 모든 JavaScript 파일 로드 후로 변경
- updateHallOfFame 함수 로드 순서 문제 해결

--- a/index.html
+++ b/index.html
@@ -305,10 +305,11 @@
         </div>
     </div>
 
-    <!-- Firebase SDK 및 JavaScript 파일들 -->
-    <script type="module" src="function/firebase-config.js"></script>
+    <!-- JavaScript 파일들 -->
     <script src="function/game-data.js"></script>
     <script src="function/game-functions.js"></script>
     <script src="function/main.js"></script>
+    <!-- Firebase SDK는 마지막에 로드하여 모든 함수가 준비된 후 초기화 -->
+    <script type="module" src="function/firebase-config.js"></script>
 </body>
 </html>
