feat: Firebase 데이터 저장/로드 및 실시간 진척율 표시 시스템 구현
🔥 Firebase 통합 기능:
- saveCurrentUserData() 및 loadCurrentUserData() 함수 구현
- 사용자별 미션 진행도를 Firebase Firestore에 실시간 저장
- 로그인 시 이전 학습 데이터 자동 복구
- 새로고침하더라도 미션 진행도 유지

📊 실시간 진척율 표시:
- 퀴즈 페이지에 진행률 바 (progress bar) 추가
- 문제를 풀 때마다 실시간으로 진행도 업데이트
- 애니메이션 효과 및 시각적 피드백 강화
- 미션 완료 시 특별 완료 효과 표시

💾 데이터 지속성:
- 일일 미션 상태 Firebase 저장으로 영구 보존
- 학습 타이머 및 보너스 상태 동기화
- 오프라인/온라인 모드 자동 감지 및 처리

이로써 사용자가 브라우저를 새로고침해도 학습 진행도가 보존되며,
퀴즈 진행 중 실시간으로 성과를 확인할 수 있습니다!

--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
                     <button class="back-btn" onclick="showPage('game', null)">&larr; 대시보드로</button>
                     <h2 id="quiz-subject-title">🇬🇧 영어 퀴즈</h2>
                     <div class="quiz-progress-info">
-                        진행: <span id="quiz-current-progress">0</span> / <span id="quiz-target-progress">10</span>
+                        <div class="progress-text">
+                            진행: <span id="quiz-current-progress">0</span> / <span id="quiz-target-progress">10</span>
+                        </div>
+                        <div class="progress-bar-container">
+                            <div class="progress-bar" id="quiz-progress-bar"></div>
+                        </div>
                     </div>
                 </div>
                 
